make modal full screen + center

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,3 +9,11 @@
 canvas {
   display: none;
 }
+
+.modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  width: 100%;
+}
