no focus effect

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,12 @@ textarea {
   border-radius: 0;
 }
 
+textarea:focus {
+  background: #BBBBBB;
+  border: 3px solid #232323;
+  border-radius: 0;
+}
+
 canvas {
   display: none;
 }
