set font family of textarea

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ body {
 }
 
 textarea {
+  font-family: "Anonymous Pro";
   background: #BBBBBB;
   border: 3px solid #232323;
   border-radius: 0;
