color of text in textarea

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ textarea {
   font-family: "Anonymous Pro";
   font-size: 2rem;
   background: #FAFAFA;
+  color: #232323;
   border: 3px solid #232323;
   border-radius: 0;
 }
