make modal overlay (fixed)

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,7 @@ canvas {
 
 .modal {
   display: none;
+  position: fixed;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
