--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ canvas {
 .modal {
   display: none;
   position: fixed;
+  background: #DDDDDD;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
