--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,10 @@ canvas {
 .modal {
   display: none;
   position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   background: #DDDDDD;
   align-items: center;
   justify-content: center;
