--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,10 @@ canvas {
   background: #DDDDDD;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  min-height: 100%;
   width: 100%;
+}
+
+img {
+  margin: 5rem;
 }
