--- a/css/styles.css
+++ b/css/styles.css
@@ -64,3 +64,40 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
+
+
+/* === Footer === */
+footer {
+	position: absolute;
+	margin: 5rem;
+}
+
+#footer-content {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+#footer-name, #footer-madeby {
+	margin-bottom: 0;
+	margin-top: 0;
+}
+
+#footer-name {
+	font-family: "Gilroy-Bold";
+}
+
+#footer-desc {
+	font-size: 2.5rem;
+}
+
+#footer-logo {
+	height: 75px;
+	width: 75px;
+	border-radius: 10px;
+}
+
+#footer-link {
+	color: #f5f5f5;
+	text-decoration: none;
+}
